// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper render with all steps completed 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiStepper-root MuiStepper-horizontal PicassoStepper-root MuiPaper-elevation0"
    >
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="PicassoStepIcon-root PicassoStepIcon-completed"
            >
              <svg
                class="PicassoSvgCheckSolid24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer PicassoStepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label PicassoStepLabel-hiddenOnMobile MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="PicassoStepLabel-label"
              >
                Step 1
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="PicassoSvgChevronRight16-root PicassoStepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="PicassoStepIcon-root PicassoStepIcon-completed"
            >
              <svg
                class="PicassoSvgCheckSolid24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer PicassoStepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label PicassoStepLabel-hiddenOnMobile MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="PicassoStepLabel-label"
              >
                Step 2
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="PicassoSvgChevronRight16-root PicassoStepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="PicassoStepIcon-root PicassoStepIcon-completed"
            >
              <svg
                class="PicassoSvgCheckSolid24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer PicassoStepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label PicassoStepLabel-hiddenOnMobile MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="PicassoStepLabel-label"
              >
                Step 3
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="PicassoSvgChevronRight16-root PicassoStepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="PicassoStepIcon-root PicassoStepIcon-completed"
            >
              <svg
                class="PicassoSvgCheckSolid24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer PicassoStepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label PicassoStepLabel-hiddenOnMobile MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="PicassoStepLabel-label"
              >
                Step 4
              </span>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stepper render with hidden labels 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiStepper-root MuiStepper-horizontal PicassoStepper-root MuiPaper-elevation0"
    >
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="PicassoStepIcon-root PicassoStepIcon-completed"
            >
              <svg
                class="PicassoSvgCheckSolid24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label PicassoStepLabel-hidden PicassoStepLabel-hiddenOnMobile MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="PicassoStepLabel-label"
              >
                Step 1
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="PicassoSvgChevronRight16-root PicassoStepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="PicassoStepIcon-root PicassoStepIcon-completed"
            >
              <svg
                class="PicassoSvgCheckSolid24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label PicassoStepLabel-hidden PicassoStepLabel-hiddenOnMobile MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="PicassoStepLabel-label"
              >
                Step 2
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="PicassoSvgChevronRight16-root PicassoStepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="PicassoStepIcon-root PicassoStepIcon-completed"
            >
              <svg
                class="PicassoSvgCheckSolid24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label PicassoStepLabel-hidden PicassoStepLabel-hiddenOnMobile MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="PicassoStepLabel-label"
              >
                Step 3
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="PicassoSvgChevronRight16-root PicassoStepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="PicassoStepIcon-root PicassoStepIcon-completed"
            >
              <svg
                class="PicassoSvgCheckSolid24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label PicassoStepLabel-hidden PicassoStepLabel-hiddenOnMobile MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="PicassoStepLabel-label"
              >
                Step 4
              </span>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stepper renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiStepper-root MuiStepper-horizontal PicassoStepper-root MuiPaper-elevation0"
    >
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="PicassoStepIcon-root PicassoStepIcon-completed"
            >
              <svg
                class="PicassoSvgCheckSolid24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer PicassoStepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label PicassoStepLabel-hiddenOnMobile MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="PicassoStepLabel-label"
              >
                Step 1
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="PicassoSvgChevronRight16-root PicassoStepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="PicassoStepIcon-root PicassoStepIcon-completed"
            >
              <svg
                class="PicassoSvgCheckSolid24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer PicassoStepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label PicassoStepLabel-hiddenOnMobile MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="PicassoStepLabel-label"
              >
                Step 2
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="PicassoSvgChevronRight16-root PicassoStepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="PicassoStepIcon-root PicassoStepIcon-active"
            />
          </span>
          <span
            class="MuiStepLabel-labelContainer PicassoStepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="PicassoStepLabel-label"
              >
                Step 3
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="PicassoSvgChevronRight16-root PicassoStepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="PicassoStepIcon-root"
            />
          </span>
          <span
            class="MuiStepLabel-labelContainer PicassoStepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label PicassoStepLabel-hiddenOnMobile MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="PicassoStepLabel-label"
              >
                Step 4
              </span>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stepper when steps are custom nodes renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiStepper-root MuiStepper-horizontal PicassoStepper-root MuiPaper-elevation0"
    >
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="PicassoStepIcon-root PicassoStepIcon-completed"
            >
              <svg
                class="PicassoSvgCheckSolid24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer PicassoStepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label PicassoStepLabel-hiddenOnMobile MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="PicassoStepLabel-label"
              >
                <span>
                  Step 1
                </span>
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="PicassoSvgChevronRight16-root PicassoStepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal MuiStep-completed"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="PicassoStepIcon-root PicassoStepIcon-completed"
            >
              <svg
                class="PicassoSvgCheckSolid24-root"
                style="min-width: 24px; min-height: 24px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm4.034 7.667-5.895 5.91-1.933-1.942-1.373 1.379 1.934 1.942 1.372 1.377 7.267-7.289-1.372-1.377Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiStepLabel-labelContainer PicassoStepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label PicassoStepLabel-hiddenOnMobile MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="PicassoStepLabel-label"
              >
                <span>
                  Step 2
                </span>
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="PicassoSvgChevronRight16-root PicassoStepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="PicassoStepIcon-root PicassoStepIcon-active"
            />
          </span>
          <span
            class="MuiStepLabel-labelContainer PicassoStepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="PicassoStepLabel-label"
              >
                <span>
                  Step 3
                </span>
              </span>
            </span>
          </span>
        </span>
      </div>
      <svg
        class="PicassoSvgChevronRight16-root PicassoStepConnector-connectorIcon"
        style="min-width: 16px; min-height: 16px;"
        viewBox="0 0 16 16"
      >
        <path
          d="m10.5 6.793.707.707L6.5 12.207l-.707-.707 4-4-4-4 .707-.707 4 4Z"
        />
      </svg>
      <div
        class="MuiStep-root MuiStep-horizontal"
      >
        <span
          class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled"
        >
          <span
            class="MuiStepLabel-iconContainer"
          >
            <div
              class="PicassoStepIcon-root"
            />
          </span>
          <span
            class="MuiStepLabel-labelContainer PicassoStepLabel-root"
          >
            <span
              class="MuiTypography-root MuiStepLabel-label PicassoStepLabel-hiddenOnMobile MuiTypography-body2 MuiTypography-displayBlock"
            >
              <span
                class="PicassoStepLabel-label"
              >
                <span>
                  Step 4
                </span>
              </span>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
